--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="magic-bg"></div>
   <header>
-    <h1>🧙‍♀️ Yeseswini Krishnakumar <span class="hp-title">| Wizard Developer</span></h1>
+    <h1>🧙‍♀️ Yeseswini Krishnakumar</h1>
     <nav>
       <a href="#about">About Me</a>
       <a href="#education">Education</a>
