--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yeseswini Krishnakumar – Harry Potter Wizard Portfolio</title>
+  <title>Yeseswini Krishnakumar – Harry Potter Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
@@ -17,6 +17,7 @@
       <a href="#skills">Skills</a>
       <a href="#projects">Spellbook</a>
       <a href="#experience">Experience</a>
+      <a href="#marauders-map">Marauder's Map</a>
       <a href="#contact">Owl Post</a>
     </nav>
   </header>
@@ -98,6 +99,14 @@
     </ul>
   </section>
 
+  <section id="marauders-map">
+    <h2>Marauder's Map <span>✨</span></h2>
+    <div id="map-container">
+      <!-- Map will load here -->
+      [Marauder's Map interactive map will appear here]
+    </div>
+  </section>
+
   <section id="contact">
     <h2>Owl Post <span>🦉</span></h2>
     <form>
@@ -106,7 +115,6 @@
       <textarea placeholder="Message to this wizard" required></textarea>
       <button type="submit">Send Owl</button>
     </form>
-    <!-- Add your real phone number here if desired -->
     <!-- <p><b>Phone:</b> [Add phone number]</p> -->
   </section>
 
