--- a/index.html
+++ b/index.html
@@ -4,123 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yeseswini Krishnakumar | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
         <nav>
-            <div class="logo">Yeseswini Krishnakumar</div>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="resume.pdf" target="_blank">Resume</a></li>
-            </ul>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#experience">Experience</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>Hi, I'm <span>Yeseswini Krishnakumar</span></h1>
-        <h2>B.Tech Computer Science Student at SRM IST</h2>
-        <p>Passionate about AI, smart systems, and community-driven tech solutions. Experience in gesture-control, IoT, and full-stack development.</p>
-        <a class="btn" href="#contact">Let's Connect</a>
+    <section id="hero">
+        <h1>Hi, I'm Yeseswini Krishnakumar</h1>
+        <p>A B.Tech student in Computer Science with a passion for building innovative solutions.</p>
+        <a href="#projects" class="cta-button">View My Work</a>
     </section>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>
-            I'm currently pursuing a B.Tech in Computer Science at SRM Institute of Science and Technology (9.40/10 CGPA), with a strong love for building innovative, impact-driven solutions—ranging from AI-powered hand tracking to IoT-based smart traffic systems. I thrive on challenging myself technically and love solving real-world problems through code and collaboration.
-        </p>
+        [cite_start]<p>I am a B.Tech student in Computer Science at SRM Institute of Science and Technology[cite: 4, 5]. [cite_start]My technical skills include programming languages like Java, Python, C, C++, HTML, CSS, and JavaScript[cite: 13]. [cite_start]I have experience with frameworks like Flask and Streamlit, and libraries such as NumPy, Pandas, OpenCV, and MediaPipe[cite: 14, 15]. My passion lies in developing projects that solve real-world problems using a combination of software and hardware. I am always eager to learn and take on new challenges.</p>
+        <a href="resume.pdf" target="_blank" class="cta-button">Download Resume</a>
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>AirMouse AI – No-Touch Hand Gesture Control System</h3>
-                <p>
-                    Developed a gesture-controlled virtual mouse enabling real-time, precise cursor actions using hand tracking.
-                    Integrated dynamic finger gestures for various actions with optimized webcam performance. <br>
-                    <b>Tech:</b> Python, OpenCV, MediaPipe, PyAutoGUI
-                </p>
+    <section id="skills">
+        <h2>Technical Skills</h2>
+        <div class="skills-container">
+            <div class="skill-group">
+                <h3>Programming Languages</h3>
+                [cite_start]<p>Java, Python, C, C++, HTML, CSS, JavaScript [cite: 13]</p>
             </div>
-            <div class="project-card">
-                <h3>Smart Route Planner</h3>
-                <p>
-                    Interactive web-based navigation tool using Dijkstra’s, A*, and BFS to compute optimal routes. Supported multiple transport modes and real-time estimation. Visualized routes using PyVis.<br>
-                    <b>Tech:</b> Python, Flask, NetworkX, PyVis, HTML, CSS
-                </p>
+            <div class="skill-group">
+                <h3>Frameworks</h3>
+                [cite_start]<p>Flask, Streamlit [cite: 14]</p>
             </div>
-            <div class="project-card">
-                <h3>Smart Traffic Control System</h3>
-                <p>
-                    IoT-based system that dynamically adjusts signals using real-time vehicle, weather, and emergency detection; live monitoring dashboard with Plotly.<br>
-                    <b>Tech:</b> Streamlit, Arduino, Raspberry Pi, MQTT, HTTPS, Sensors
-                </p>
+            <div class="skill-group">
+                <h3>Libraries & Tools</h3>
+                [cite_start]<p>NumPy, Pandas, OpenCV, MediaPipe, PyAutoGUI, MySQL, MongoDB [cite: 15]</p>
             </div>
         </div>
     </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul class="skills-list">
-            <li>Python</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C++</li>
-            <li>Flask</li>
-            <li>Streamlit</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>NumPy</li>
-            <li>Pandas</li>
-            <li>OpenCV</li>
-            <li>MediaPipe</li>
-            <li>PyAutoGUI</li>
-            <li>MySQL</li>
-            <li>MongoDB</li>
-        </ul>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-container">
+            <div class="project-card">
+                <h3>AirMouse AI - No-Touch Hand Gesture Control System</h3>
+                [cite_start]<p>A gesture-controlled virtual mouse enabling real-time, precise cursor actions using hand tracking[cite: 17, 19]. [cite_start]It uses dynamic finger gestures for clicks, scrolling, and volume control[cite: 20].</p>
+                [cite_start]<p class="tech-stack">**Technologies:** Python, OpenCV, MediaPipe, PyAutoGUI [cite: 18]</p>
+                </div>
+
+            <div class="project-card">
+                <h3>Smart Route Planner</h3>
+                [cite_start]<p>An interactive web-based navigation tool using Dijkstra's, A*, and BFS algorithms to compute optimal routes across South Indian cities[cite: 21, 23]. [cite_start]It integrates multiple transport modes with real-time travel estimation[cite: 24].</p>
+                [cite_start]<p class="tech-stack">**Technologies:** Python, Flask, NetworkX, PyVis, HTML, CSS [cite: 22]</p>
+                </div>
+
+            <div class="project-card">
+                <h3>Smart Traffic Control System</h3>
+                [cite_start]<p>An IoT-based system that dynamically adjusts signal timings using real-time vehicle count, weather, and emergency detection[cite: 27]. [cite_start]The project includes a Streamlit dashboard with Plotly visualizations for live monitoring[cite: 28].</p>
+                [cite_start]<p class="tech-stack">**Technologies:** Streamlit, Arduino, Raspberry Pi, MQTT [cite: 26, 29]</p>
+                </div>
+        </div>
     </section>
 
     <section id="experience">
         <h2>Experience</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Volunteer Teacher</h3>
-                <p>
-                    <b>Teach For India</b> (June 2025)<br>
-                    Taught underprivileged students core subjects and provided academic support as part of a community initiative.
-                </p>
-            </div>
-            <div class="project-card">
-                <h3>Core Member – Media Domain</h3>
-                <p>
-                    <b>Sketch Club, SRM IST</b> (Sep 2024 – Present)<br>
-                    Documented college events through photos/videos and created engaging social media content.
-                </p>
-            </div>
-            <div class="project-card">
-                <h3>Core Member – Technical Domain</h3>
-                <p>
-                    <b>Techpro Club, SRM IST</b> (Sep 2023 – Aug 2024)<br>
-                    Organized technical events and contributed to the successful execution of InnoRave.
-                </p>
-            </div>
+        <div class="experience-card">
+            <h3>Volunteer Teacher | Teach For India</h3>
+            [cite_start]<p class="duration">June 2025 [cite: 32]</p>
+            [cite_start]<p>Taught core subjects to underprivileged students and provided academic support as part of a community initiative[cite: 33].</p>
+        </div>
+        <div class="experience-card">
+            <h3>Core Member - Media Domain | Sketch Club, SRM Institute of Science and Technology</h3>
+            [cite_start]<p class="duration">Sep 2024 - Present [cite: 35]</p>
+            [cite_start]<p>Documented college events through photos/videos and created social media content[cite: 36].</p>
+        </div>
+        <div class="experience-card">
+            <h3>Core Member - Technical Domain | Techpro Club, SRM Institute of Science and Technology</h3>
+            [cite_start]<p class="duration">Sep 2023 - Aug 2024 [cite: 37]</p>
+            [cite_start]<p>Organized technical events and contributed to the execution of InnoRave[cite: 38].</p>
         </div>
     </section>
 
     <section id="contact">
         <h2>Contact Me</h2>
+        [cite_start]<p>Feel free to reach out to me! [cite: 2]</p>
         <p>Email: <a href="mailto:yeshukas@gmail.com">yeshukas@gmail.com</a></p>
-        <p>Phone: <a href="tel:+919894144516">+91 9894144516</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">Your LinkedIn (add your profile URL)</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/yeseswini" target="_blank">in/yeseswini</a></p>
     </section>
 
     <footer>
-        <p>© 2025 Yeseswini Krishnakumar. All Rights Reserved.</p>
+        <p>&copy; 2025 Yeseswini Krishnakumar. All Rights Reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
