--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="about">
         <h2>About Me</h2>
         [cite_start]<p>I am a B.Tech student in Computer Science at SRM Institute of Science and Technology[cite: 4, 5]. [cite_start]My technical skills include programming languages like Java, Python, C, C++, HTML, CSS, and JavaScript[cite: 13]. [cite_start]I have experience with frameworks like Flask and Streamlit, and libraries such as NumPy, Pandas, OpenCV, and MediaPipe[cite: 14, 15]. My passion lies in developing projects that solve real-world problems using a combination of software and hardware. I am always eager to learn and take on new challenges.</p>
-        <a href="resume.pdf" target="_blank" class="cta-button">Download Resume</a>
+        <a href="resume.pdf.pdf" target="_blank" class="cta-button">Download Resume</a>
     </section>
 
     <section id="skills">
@@ -55,21 +55,21 @@
         <h2>My Projects</h2>
         <div class="project-container">
             <div class="project-card">
-                <h3>AirMouse AI - No-Touch Hand Gesture Control System</h3>
-                [cite_start]<p>A gesture-controlled virtual mouse enabling real-time, precise cursor actions using hand tracking[cite: 17, 19]. [cite_start]It uses dynamic finger gestures for clicks, scrolling, and volume control[cite: 20].</p>
+                [cite_start]<h3>AirMouse AI - No-Touch Hand Gesture Control System [cite: 17]</h3>
+                [cite_start]<p>A gesture-controlled virtual mouse enabling real-time, precise cursor actions using hand tracking[cite: 19]. [cite_start]It uses dynamic finger gestures for clicks, scrolling, and volume control with optimized webcam performance[cite: 20].</p>
                 [cite_start]<p class="tech-stack">**Technologies:** Python, OpenCV, MediaPipe, PyAutoGUI [cite: 18]</p>
                 </div>
 
             <div class="project-card">
-                <h3>Smart Route Planner</h3>
-                [cite_start]<p>An interactive web-based navigation tool using Dijkstra's, A*, and BFS algorithms to compute optimal routes across South Indian cities[cite: 21, 23]. [cite_start]It integrates multiple transport modes with real-time travel estimation[cite: 24].</p>
+                [cite_start]<h3>Smart Route Planner [cite: 21]</h3>
+                [cite_start]<p>An interactive web-based navigation tool using Dijkstra's, A*, and BFS algorithms to compute optimal routes across South Indian cities[cite: 23]. [cite_start]It integrates multiple transport modes with real-time travel estimation and interactive graph visualization via PyVis[cite: 24].</p>
                 [cite_start]<p class="tech-stack">**Technologies:** Python, Flask, NetworkX, PyVis, HTML, CSS [cite: 22]</p>
                 </div>
 
             <div class="project-card">
-                <h3>Smart Traffic Control System</h3>
-                [cite_start]<p>An IoT-based system that dynamically adjusts signal timings using real-time vehicle count, weather, and emergency detection[cite: 27]. [cite_start]The project includes a Streamlit dashboard with Plotly visualizations for live monitoring[cite: 28].</p>
-                [cite_start]<p class="tech-stack">**Technologies:** Streamlit, Arduino, Raspberry Pi, MQTT [cite: 26, 29]</p>
+                [cite_start]<h3>Smart Traffic Control System [cite: 25]</h3>
+                [cite_start]<p>An IoT-based system that dynamically adjusts signal timings using real-time vehicle count, weather conditions, time of day, and emergency detection[cite: 27]. [cite_start]The project includes a Streamlit dashboard with Plotly visualizations for live monitoring, integrating Arduino, Raspberry Pi, sensors, MQTT, and HTTPS[cite: 28, 29].</p>
+                [cite_start]<p class="tech-stack">**Technologies:** Streamlit Dashboard, Arduino & Raspberry Pi Integration, MQTT, HTTPS [cite: 26, 29]</p>
                 </div>
         </div>
     </section>
@@ -77,17 +77,17 @@
     <section id="experience">
         <h2>Experience</h2>
         <div class="experience-card">
-            <h3>Volunteer Teacher | Teach For India</h3>
+            <h3>Volunteer Teacher | [cite_start]Teach For India [cite: 31]</h3>
             [cite_start]<p class="duration">June 2025 [cite: 32]</p>
-            [cite_start]<p>Taught core subjects to underprivileged students and provided academic support as part of a community initiative[cite: 33].</p>
+            [cite_start]<p>Taught underprivileged students core subjects and provided academic support as part of a community initiative[cite: 33].</p>
         </div>
         <div class="experience-card">
-            <h3>Core Member - Media Domain | Sketch Club, SRM Institute of Science and Technology</h3>
+            <h3>Core Member - Media Domain | [cite_start]Sketch Club, SRM Institute of Science and Technology [cite: 34]</h3>
             [cite_start]<p class="duration">Sep 2024 - Present [cite: 35]</p>
             [cite_start]<p>Documented college events through photos/videos and created social media content[cite: 36].</p>
         </div>
         <div class="experience-card">
-            <h3>Core Member - Technical Domain | Techpro Club, SRM Institute of Science and Technology</h3>
+            <h3>Core Member - Technical Domain | [cite_start]Techpro Club, SRM Institute of Science and Technology [cite: 37]</h3>
             [cite_start]<p class="duration">Sep 2023 - Aug 2024 [cite: 37]</p>
             [cite_start]<p>Organized technical events and contributed to the execution of InnoRave[cite: 38].</p>
         </div>
@@ -95,13 +95,13 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        [cite_start]<p>Feel free to reach out to me! [cite: 2]</p>
-        <p>Email: <a href="mailto:yeshukas@gmail.com">yeshukas@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yeseswini" target="_blank">in/yeseswini</a></p>
+        <p>Feel free to reach out to me!</p>
+        [cite_start]<p>Email: <a href="mailto:yeshukas@gmail.com">yeshukas@gmail.com</a> [cite: 2]</p>
+        [cite_start]<p>LinkedIn: <a href="https://linkedin.com/in/yeseswini" target="_blank">in/yeseswini</a> [cite: 2]</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Yeseswini Krishnakumar. All Rights Reserved.</p>
+        <p>&copy; 2025 Yeseswini Krishnakumar. [cite_start]All Rights Reserved. [cite: 1]</p>
     </footer>
 
     <script src="script.js"></script>
